[package]
name = "gcp-access-token"
version = "0.1.1"
authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
failure = "0.1.5"
hyper = "^0.10"
hyper-rustls = "^0.6"
hyper-native-tls = "0.3.0"
native-tls = "0.2"
serde_json = "1.0"
yup-oauth2 = "1.0"
